[gd_scene load_steps=2 format=2]

[ext_resource path="res://scene/items/BrightLightDetector.gd" type="Script" id=1]

[node name="BrightLightDetector" type="Area2D"]
input_pickable = false
monitorable = false
collision_layer = 0
collision_mask = 16
script = ExtResource( 1 )

[node name="RaytraceTimer" type="Timer" parent="."]
wait_time = 0.2
[connection signal="area_entered" from="." to="." method="_on_BrightLightDetector_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_BrightLightDetector_area_exited"]
[connection signal="timeout" from="RaytraceTimer" to="." method="_on_RaytraceTimer_timeout"]
